--- a/PMSFrontend/index.html
+++ b/PMSFrontend/index.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pmsfrontend</title>
+    <title>PMS Dashboard</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: {
+              sans: ['Inter', 'ui-sans-serif', 'system-ui'],
+            },
+            colors: {
+              primary: {
+                500: '#2563eb',
+                600: '#1d4ed8',
+              },
+              accent: {
+                500: '#7c3aed',
+              },
+            },
+          },
+        },
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
